# COM441---Program-solving-through

./: .gitignore  Lists.py  ProgramPrimeNumbers.py  README.md  main.py  pyproject.toml
Demos/: gitcyrcle.py  ifelseifelse.py  someloops.py
Demos/Week 2/: Tasks6.py  task7.py  whileloopCode.py
Demos/Week 2/Week4/: listseminar.py
Demos/Week 3/: FirstNotice.py  Program_about_rooms.py
Demos/Week 4/: lists.py
Demos/Week 5/: students.py
basics/output/: escape_characters.py  moreLists.py  multiline_message.py
